# knight

./: .clang-format  .clang-tidy  .gitignore  .typos.toml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TROUBLESHOOTING.md
.github/workflows/: build-macos.yaml  build-ubuntu.yaml  build-win.yaml
analyzer/: CMakeLists.txt  README.md
analyzer/include/analyzer/core/: analysis_context.hpp  analysis_manager.hpp  analyzer_options.hpp  checker_context.hpp  checker_manager.hpp  location_context.hpp  location_manager.hpp  proc_cfg.hpp  program_state.hpp  stack_frame.hpp  symbol.hpp  symbol_manager.hpp
analyzer/include/analyzer/core/analysis/: analyses.hpp  analysis_base.hpp  events.hpp
analyzer/include/analyzer/core/analysis/core/: assign_resolver.hpp  binary_op_resolver.hpp  numerical_analysis.hpp  numerical_event.hpp  pointer_analysis.hpp  pointer_event.hpp  symbol_resolver.hpp  unary_op_resolver.hpp
analyzer/include/analyzer/core/analysis/debug/: state_printer.hpp
analyzer/include/analyzer/core/analysis/demo/: demo_analysis.hpp
analyzer/include/analyzer/core/checker/: checker_base.hpp  checkers.hpp
analyzer/include/analyzer/core/checker/debug/: inspection.hpp
analyzer/include/analyzer/core/checker/demo/: demo_checker.hpp
analyzer/include/analyzer/core/constraint/: constraint.hpp  linear.hpp
analyzer/include/analyzer/core/def/: analyses.def
analyzer/include/analyzer/core/domain/: bound.hpp  demo_dom.hpp  dom_base.hpp  domains.hpp  interval.hpp  pointer.hpp
analyzer/include/analyzer/core/domain/map/: map_domain.hpp  separate_numerical_domain.hpp
analyzer/include/analyzer/core/domain/num/: machine_znum.hpp  qnum.hpp  znum.hpp
analyzer/include/analyzer/core/domain/numerical/: interval_dom.hpp  interval_dom.tpp  numerical_base.hpp
analyzer/include/analyzer/core/domain/set/: discrete_domain.hpp
analyzer/include/analyzer/core/engine/: block_engine.hpp  intraprocedural_fixpoint.hpp  iterator.hpp  wto_iterator.hpp  wto_iterator_impl.tpp
analyzer/include/analyzer/core/event/: events.hpp
analyzer/include/analyzer/core/region/: region.hpp  regions.hpp
analyzer/include/analyzer/support/: analysis.hpp  checker.hpp  clang_ast.hpp  dom.hpp  event.hpp  symbol.hpp
analyzer/include/analyzer/tooling/: cl_opts.hpp  context.hpp  diagnostic.hpp  driver.hpp  factory.hpp  knight.hpp  module.hpp  options.hpp  reporter.hpp
analyzer/include/analyzer/util/: wto.hpp
analyzer/src/: CMakeLists.txt
analyzer/src/core/: analysis_context.cpp  analysis_manager.cpp  checker_context.cpp  checker_manager.cpp  location_manager.cpp  proc_cfg.cpp  program_state.cpp  stack_frame.cpp  symbol.cpp
analyzer/src/core/analysis/: analysis_base.cpp
analyzer/src/core/analysis/core/: assign_resolver.cpp  binary_op_resolver.cpp  numerical_analysis.cpp  pointer_analysis.cpp  symbol_resolver.cpp  unary_op_resolver.cpp
analyzer/src/core/analysis/debug/: state_printer.cpp
analyzer/src/core/analysis/demo/: demo_analysis.cpp
analyzer/src/core/checker/: checker_base.cpp
analyzer/src/core/checker/debug/: inspection.cpp
analyzer/src/core/domain/: dom_registry.cpp
analyzer/src/core/engine/: block_engine.cpp  intraprocedural_fixpoint.cpp
analyzer/src/core/region/: region.cpp
analyzer/src/module/: core.cpp  debug.cpp  demo.cpp
analyzer/src/tooling/: context.cpp  diagnostic.cpp  driver.cpp  factory.cpp  knight.cpp  options.cpp  reporter.cpp
analyzer/test/testcase/numerical/: assign.c
analyzer/test/testcase/region/: assign.cpp
analyzer/tools/: CMakeLists.txt  main.cpp
cg/: CMakeLists.txt
cg/src/: CMakeLists.txt
cg/src/core/: builder.cpp
cg/src/db/: db.cpp
cg/src/tooling/: driver.cpp
cg/test/testcase/: a.cpp
cg/tools/: CMakeLists.txt  main.cpp
cmake/: addCURL.cmake  addClang.cmake  addCommon.cmake  addGMP.cmake  addGTest.cmake  addLLVM.cmake  addSqlite3.cmake
common/: CMakeLists.txt
common/src/: CMakeLists.txt
common/src/util/: clang.cpp  globs.cpp  sqlite3.cpp  vfs.cpp
common/test/: sqlite3.cpp
include/dfa/: analysis_context.hpp  analysis_manager.hpp  analyzer_options.hpp  checker_context.hpp  checker_manager.hpp  location_context.hpp  location_manager.hpp  proc_cfg.hpp  program_state.hpp  stack_frame.hpp  symbol.hpp  symbol_manager.hpp
include/dfa/analysis/: analyses.def  analyses.hpp  analysis_base.hpp  demo_analysis.hpp  events.hpp  itv_analysis.hpp  numerical_event.hpp  resource_leak_analysis.cpp  resource_leak_analysis.hpp  symbol_resolver.hpp
include/dfa/checker/: checker_base.hpp  checkers.def  (+2 more)
include/knight/: ClangTidyRunner.h
include/support/: analysis.hpp  checker.hpp  clang_ast.hpp  dom.hpp  dumpable.hpp  event.hpp  graph.hpp  symbol.hpp
include/tooling/: cl_opts.hpp  context.hpp  diagnostic.hpp  factory.hpp  force_linker.hpp  knight.hpp  module.hpp  options.hpp  reporter.hpp
include/util/: assert.hpp  globs.hpp  log.hpp  sqlite3.hpp  vfs.hpp  wto.hpp
scripts/: install  run-clang-format  run-clang-tidy  unittest
src/: CMakeLists.txt  ClangTidyRunner.cpp
src/dfa/: analysis_context.cpp  analysis_manager.cpp  checker_context.cpp  checker_manager.cpp  location_manager.cpp  proc_cfg.cpp  program_state.cpp  stack_frame.cpp  symbol.cpp
src/dfa/analysis/: analysis_base.cpp  demo_analysis.cpp  itv_analysis.cpp  symbol_resolver.cpp
src/dfa/analysis/core/: assign_resolver.cpp  binary_op_resolver.cpp  itv_analysis.cpp  numerical_analysis.cpp  pointer_analysis.cpp  symbol_resolver.cpp  unary_op_resolver.cpp
src/dfa/analysis/debug/: state_printer.cpp
src/dfa/analysis/demo/: demo_analysis.cpp
src/dfa/checker/: checker_base.cpp
src/dfa/checker/debug/: inspection.cpp
src/dfa/domain/: dom_registry.cpp
src/dfa/engine/: block_engine.cpp  intraprocedural_fixpoint.cpp
src/dfa/region/: region.cpp
src/dfa/symbol/: symbol.cpp
src/module/: core.cpp  debug.cpp  demo.cpp
src/tooling/: context.cpp  diagnostic.cpp  factory.cpp  knight.cpp  options.cpp  reporter.cpp
src/util/: globs.cpp  sqlite3.cpp  vfs.cpp
test/testcase/: a.cpp  b.cpp  branch.cpp  c.cpp  d.cpp  if-else.cpp  x.cpp
tools/: CMakeLists.txt  main.cpp
(+65 files in other folders)
